ME-2401 fixed checkout page should align properly Hawthorn IE

--- a/initData/templates/foodDemoApp/css/style.css
+++ b/initData/templates/foodDemoApp/css/style.css
@@ -391,3 +391,15 @@ input[type=number] {
 input {
     width: 100%;
 }
+
+/*IE 10 and abouve specific css wirte inside this media quary*/
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    .delivery-details .item-checkbox .checkbox{
+        top: 35px;
+        left: -39px;
+    }
+    .payment .item-checkbox .checkbox{
+        top: 85%;
+        zoom: 0.6;
+    }
+}
